started styling books

--- a/style.css
+++ b/style.css
@@ -10,3 +10,8 @@
     display: flex;
     flex-direction: row;
 }
+.books-card {
+    background-color: red;
+    padding: 0.5em;
+    margin: 0.5em;
+}
