--- a/style.css
+++ b/style.css
@@ -3,6 +3,15 @@
     padding: 0;
     margin: 0;
 }
+header {
+    display: flex;
+    justify-content: space-between;
+    margin: 1em 1em;
+}
+.website-description {
+    margin: 1em 1em;
+    line-break:normal;
+}
 .wrapper {
     text-align: center;
 }
@@ -11,7 +20,9 @@
     flex-direction: row;
 }
 .books-card {
-    background-color: red;
-    padding: 0.5em;
     margin: 0.5em;
+    border-radius: 1em;
+}
+.book-img-cover {
+    width: 100%;
 }
