--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     margin: 0;
 }
+body {
+    background-color: burlywood;
+}
 header {
     display: flex;
     justify-content: space-between;
@@ -20,9 +23,12 @@ header {
     flex-direction: row;
 }
 .books-card {
+    background-color: wheat;
     margin: 0.5em;
     border-radius: 1em;
 }
 .book-img-cover {
     width: 100%;
+    border-top-left-radius: 1em;
+    border-top-right-radius: 1em;
 }
