added bg gradient

--- a/style.css
+++ b/style.css
@@ -4,16 +4,22 @@
     margin: 0;
 }
 body {
-    background-color: burlywood;
+    background-image: linear-gradient(rgb(54, 134, 61), rgb(168, 168, 69) 10%, rgb(19, 85, 19) 20%);
 }
 header {
     display: flex;
     justify-content: space-between;
     margin: 1em 1em;
+    color: white;
 }
 .website-description {
     margin: 1em 1em;
     line-break:normal;
+    line-height: 2;
+    font-weight: 700;
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin: 0 25em;
 }
 .wrapper {
     text-align: center;
